force-app/main/default/src/objects/MVN_RBM_Sharing_Setting__mdt/MVN_RBM_Sharing_Setting__mdt.object-meta.xml
<CustomObject>
    <description>A record represents the number of days that a Case with a given Therapy Status/Sub-Status combination or Pharmacy Status is visible to the RBM group.</description>
    <label>RBM Sharing Setting</label>
    <pluralLabel>RBM Sharing Settings</pluralLabel>
</CustomObject>