force-app/main/default/src/objects/MVN_RBM_Sharing_Setting__mdt/fields/MVN_Days_Visible__c.field-meta.xml
<CustomField>
    <fullName>MVN_Days_Visible__c</fullName>
    <description>Amount of time, in days, that records with either a Therapy Status/Sub-Status or a Pharmacy Status should be visible to RBMs.</description>
    <label>Days Visible</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>