force-app/main/default/src/objects/MVN_RBM_Sharing_Setting__mdt/fields/MVN_Program_Name__c.field-meta.xml
<CustomField>
    <fullName>MVN_Program_Name__c</fullName>
    <description>DeveloperName of the Program custom metadata that the sharing setting applies to.</description>
    <label>Program Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>