force-app/main/default/src/objects/MVN_RBM_Sharing_Setting__mdt/fields/MVN_Status__c.field-meta.xml
<CustomField>
    <fullName>MVN_Status__c</fullName>
    <description>Therapy Status or Pharmacy Status value that the setting applies to.</description>
    <label>Status</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>