force-app/main/default/src/objects/MVN_RBM_Sharing_Setting__mdt/fields/MVN_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>MVN_Sub_Status__c</fullName>
    <description>Therapy Sub-Status that the setting applies to.</description>
    <label>Sub-Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>