force-app/main/default/src/objects/MVN_RBM_Sharing_Setting__mdt/fields/MVN_Type__c.field-meta.xml
<CustomField>
    <fullName>MVN_Type__c</fullName>
    <description>The Status field that the setting applies to.  &apos;Therapy&apos; for Therapy Status, &apos;Pharmacy&apos; for Pharmacy Status.</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Therapy</fullName>
                <default>true</default>
                <label>Therapy</label>
            </value>
            <value>
                <fullName>Pharmacy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>