force-app/main/default/src/objects/MVN_RBM_Sharing_Setting__mdt/validationRules/MVN_Require_Status_for_Sub_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>MVN_Require_Status_for_Sub_Status</fullName>
    <active>true</active>
    <description>Requires the Status field to be populated when the Sub-Status field has a value.</description>
    <errorConditionFormula>ISBLANK(MVN_Status__c) &amp;&amp; NOT(ISBLANK(MVN_Sub_Status__c ))</errorConditionFormula>
    <errorMessage>A Status value is required if Sub-Status is not blank.</errorMessage>
</ValidationRule>