force-app/main/default/src/objects/MVN_RBM_Sharing_Setting__mdt/listViews/All_RBM_Sharing_Settings.listView-meta.xml
<ListView>
    <fullName>All_RBM_Sharing_Settings</fullName>
    <columns>MasterLabel</columns>
    <columns>MVN_Program_Name__c</columns>
    <columns>MVN_Type__c</columns>
    <columns>MVN_Status__c</columns>
    <columns>MVN_Sub_Status__c</columns>
    <columns>MVN_Days_Visible__c</columns>
    <filterScope>Everything</filterScope>
    <label>All RBM Sharing Settings</label>
    <language>en_US</language>
</ListView>